force-app/main/default/objects/Vehicle/Vehicle.object-meta.xml
<CustomObject>
</CustomObject>