force-app/main/default/objects/Vehicle/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>