force-app/main/default/objects/Vehicle/fields/FrontDriver__c.field-meta.xml
<CustomField>
    <fullName>FrontDriver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FrontDriver</label>
    <type>Checkbox</type>
</CustomField>