force-app/main/default/objects/Vehicle/fields/FrontPassenger__c.field-meta.xml
<CustomField>
    <fullName>FrontPassenger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FrontPassenger</label>
    <type>Checkbox</type>
</CustomField>