force-app/main/default/objects/Vehicle/fields/Manufacturer_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Warranty__c</fullName>
    <label>Manufacturer Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Warranty</fullName>
            </value>
            <value>
                <fullName>Not In Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>