force-app/main/default/objects/Vehicle/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Asset.Contact.Id, Asset.Contact.FirstName +&quot; &quot; + Asset.Contact.LastName, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>