force-app/main/default/objects/Vehicle/fields/Owner_Count__c.field-meta.xml
<CustomField>
    <fullName>Owner_Count__c</fullName>
    <label>Owner Count</label>
    <length>50</length>
    <type>Text</type>
</CustomField>