force-app/main/default/objects/Vehicle/fields/RearDriver__c.field-meta.xml
<CustomField>
    <fullName>RearDriver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RearDriver</label>
    <type>Checkbox</type>
</CustomField>