force-app/main/default/objects/Vehicle/fields/RearPassenger__c.field-meta.xml
<CustomField>
    <fullName>RearPassenger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>RearPassenger</label>
    <type>Checkbox</type>
</CustomField>