force-app/main/default/objects/Vehicle/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <formula>VehicleIdentificationNumber</formula>
    <label>VIN</label>
    <type>Text</type>
</CustomField>